force-app/main/default/objects/redwing__Acquisition_Rule_Assignment__c/redwing__Acquisition_Rule_Assignment__c.object-meta.xml
<CustomObject>
    <label>Acquisition Rule Assignment</label>
    <nameField>
        <displayFormat>ARA-{000000}</displayFormat>
        <label>Acquisition Rule Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquisition Rule Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>