force-app/main/default/objects/redwing__Acquisition_Rule_Assignment__c/fields/redwing__Achievement_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement Assignment</label>
    <referenceTo>redwing__Achievement_Assignment__c</referenceTo>
    <relationshipLabel>Acquisition Rule Assignments</relationshipLabel>
    <relationshipName>Acquisition_Rule_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>