force-app/main/default/objects/redwing__Acquisition_Rule_Assignment__c/fields/redwing__Completed_On__c.field-meta.xml
<CustomField>
    <fullName>redwing__Completed_On__c</fullName>
    <label>Completed On</label>
    <type>Date</type>
</CustomField>