force-app/main/default/objects/redwing__Acquisition_Rule_Assignment__c/fields/redwing__Renewal_Started_On__c.field-meta.xml
<CustomField>
    <fullName>redwing__Renewal_Started_On__c</fullName>
    <inlineHelpText>Date and time when user clicked the Renew button for an achievement.</inlineHelpText>
    <label>Renewal Started On</label>
    <type>Date</type>
</CustomField>